# detector-pyqt

./: .gitignore  README.md  config.json  detector_cam.py  file_handler.py  main.py  object_tracker.py  pyproject.toml
app/: config.json
app/cam/: detector_cam.py  detector_config.py  file_handler.py  object_tracker.py
app/gui/: log_popup.py  main_layout.py  member_popup.py  setting_dialog.py  target_layout.py
copy/: detector_cam copy.py  event_fetcher.py  evnet_handler.py  main_layout copy.py  test.py
gui/: main_layout.py  setting_dialog.py
lib/: detector_cam.py  file_handler.py  object_tracker.py
